--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main {
+            java.srcDirs = ['src/main/java', 'src/main/java-gen']
+        }
+    }
 }
 
 dependencies {
@@ -24,7 +29,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
-    compile 'de.greenrobot:greendao:1.3.7'
+    compile 'org.greenrobot:greendao:2.2.0'
     compile 'com.orhanobut:logger:1.3'
     compile 'com.roomorama:caldroid:3.0.1'
     compile 'de.hdodenhof:circleimageview:2.0.0'
