--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,12 +21,11 @@
         <activity
             android:name=".ui.activity.AddDiaryActivity"
             android:label="@string/add_diary"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.ShowDiaryActivity"
             android:label="@string/add_diary"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
